# ADE_application

./: .gitignore  README.md  logging.conf  main.py  pyproject.toml  requirements.txt
configs/: category.json  config.py
database/: base.py  chat.py
pdmenv/: pyvenv.cfg
routes/: collection.py  document.py  fetch_article.py  patients.py
scripts/: __init__.py  log_setup.py
services/Article/: ArxivArticle.py  article_model.py
services/Collection/: api.py  schemas.py
services/Documents/: api.py  model_request.py
